--- a/web/themes/citizen_patterns/components/_patterns/00-base/_03-units.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/_03-units.scss
@@ -20,7 +20,7 @@ $onlyMobile: max-width $desk - 1px;
 
 /* SPACING & LAYOUT VARIABLES
 ----------------------------- */
-$spaceXxs: 1rem;
+$spaceXxs: .5rem;
 $spaceXs : 1rem;
 $spaceSm : 2rem;
 $spaceMd : 3rem;
