--- a/web/themes/citizen_patterns/components/_patterns/01-parts/02-typography/_typography.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-parts/02-typography/_typography.scss
@@ -257,6 +257,9 @@ p{
 	&:not(:last-child){
 		margin-bottom: $spaceMd;
 	}
+	& + article:not(:last-child){
+		margin-bottom: $spaceMd;
+	}
 }
 
 a {
