--- a/web/themes/citizen_patterns/components/_patterns/05-assembly/02-styleguide/styleguide.scss
+++ b/web/themes/citizen_patterns/components/_patterns/05-assembly/02-styleguide/styleguide.scss
@@ -31,7 +31,7 @@ $navBack      : $blue;
 $navBackHover : $midBlue;
 $adminText    : 'PT Sans', sans-serif;
 
-$subGroupHeader      : $gold;
+$subGroupHeader      : $adminGold;
 $subGroupHeaderBack  : $darkGrey;
 
 
