--- a/web/themes/crane/scss/entities/_paragraphs.scss
+++ b/web/themes/crane/scss/entities/_paragraphs.scss
@@ -60,7 +60,7 @@
 			grid-template-columns: 300px auto 1fr auto;
 		}
 		.paragraph-type.form-wrapper{
-			&.landing-page-section,.basic-page-section{
+			&.landing-page-section,&.basic-page-section{
 				.paragraph-type-label{
 					@extend %section;
 				}
@@ -341,7 +341,7 @@
 			}
 		}
 	}
-}
+}//end preview subform
 
 /* ACCORDION GROUP
 ---------------------- */
@@ -401,7 +401,7 @@
 			margin: -5px 0 5px;
 		}
 	}
-}//end image
+}//end horizontal rule
 
 /* IMAGE
 ------------------- */
@@ -430,6 +430,6 @@
 	.field--name-field-video{
 		@include safeFlex(row,wrap,start,center);
 	}
-}//end image
+}//end video
 
 
