--- a/web/themes/citizen_patterns/components/_patterns/02-chunks/01-navigation/02-superfish/_superfish.scss
+++ b/web/themes/citizen_patterns/components/_patterns/02-chunks/01-navigation/02-superfish/_superfish.scss
@@ -117,10 +117,7 @@ ul.sf-menu.sf-horizontal{
 				background-repeat: no-repeat;
 				background-size: 8px;
 				background-position: center;
-				-webkit-transition: -webkit-transform 0.15s ease-in 0s;
-				transition: -webkit-transform 0.15s ease-in 0s;
-				transition: transform 0.15s ease-in 0s;
-				transition: transform 0.15s ease-in 0s, -webkit-transform 0.15s ease-in 0s;
+				@include transFormAnimate;
 			}
 			&:hover,&:focus{
 				&:after{
@@ -197,10 +194,7 @@ ul.sf-menu.sf-accordion{
 			background-repeat: no-repeat;
 			background-size: 20px;
 			background-position: center;
-			-webkit-transition: -webkit-transform 0.15s ease-in 0s;
-			transition: -webkit-transform 0.15s ease-in 0s;
-			transition: transform 0.15s ease-in 0s;
-			transition: transform 0.15s ease-in 0s, -webkit-transform 0.15s ease-in 0s;
+			@include transFormAnimate;
 			//expander toggle
 			&:after{
 				content: none;
@@ -220,9 +214,7 @@ ul.sf-menu.sf-accordion{
 			background-repeat: no-repeat;
 			background-size: 20px;
 			background-position: center;
-			-webkit-transform: rotate(180deg);
-			-ms-transform: rotate(180deg);
-			transform: rotate(180deg);
+			@include rotate(180);
 		}
 	}//end li
 
