--- a/web/themes/citizen_patterns/templates/zzz-custom/user/field--user--name--user.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/user/field--user--name--user.html.twig
@@ -53,7 +53,7 @@
 		{% if image %}
 			{{ drupal_entity('media',image,'square')}}
 		{% else %}
-			<img class="avatar" src="{{ avatar }}" width="225px" height="225px" alt="User profile avatar" />
+			<img class="avatar" src="{{ avatar }}" width="275px" height="auto" alt="User profile avatar" />
 		{% endif %}
 	</div>
 
