--- a/web/themes/crane/scss/components/_containers.scss
+++ b/web/themes/crane/scss/components/_containers.scss
@@ -8,8 +8,9 @@
 	}
 }
 .ief-form-bottom .fieldset-wrapper > div{
-	input[value="Select Image"],input[value="Select File"],input[value="Select Video"]{
-		margin: 1em 0;
+	input[value="Select Image"],input[value="Select File"],input[value="Select Video"],input[value="Select Audio"]{
+		margin-top: 1em;
+		margin-bottom: 1em !important;
 	}
 	.ief-entity-submit[value="Add media"]{
 		display: none;
@@ -32,9 +33,7 @@
 				color: $black;
 			}
 			&:before{
-				-webkit-transform: rotate(90deg);
-			  -ms-transform: rotate(90deg);
-			  transform: rotate(90deg);
+				@include rotate(90);
 			}
 		}
 		.entity-meta &{
@@ -72,10 +71,7 @@
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: contain;
-		-webkit-transition: -webkit-transform 0.15s ease-in 0s;
-	  transition: -webkit-transform 0.15s ease-in 0s;
-	  transition: transform 0.15s ease-in 0s;
-	  transition: transform 0.15s ease-in 0s, -webkit-transform 0.15s ease-in 0s;
+		@include transFormAnimate;
 	}
 	&.form-required{
 		&:after{
@@ -107,9 +103,7 @@
 				background: $siteBack;
 				box-shadow: 0 2px 4px $metaBorderSoft;
 				&:before{
-					-webkit-transform: rotate(90deg);
-				  -ms-transform: rotate(90deg);
-				  transform: rotate(90deg);
+					@include rotate(90);
 				}
 				&:hover{
 					background: $iceBlue;
