--- a/web/themes/crane/scss/entities/_webforms.scss
+++ b/web/themes/crane/scss/entities/_webforms.scss
@@ -68,17 +68,12 @@
 		background-repeat: no-repeat;
 		background-size: 16px;
 		background-position: center;
-		-webkit-transition: -webkit-transform 0.15s ease-in 0s;
-	  transition: -webkit-transform 0.15s ease-in 0s;
-	  transition: transform 0.15s ease-in 0s;
-	  transition: transform 0.15s ease-in 0s, -webkit-transform 0.15s ease-in 0s;
+		@include transFormAnimate;
 		&:hover,&:focus{
 			background-image: url('../images/icons/admin-icons/chevron-down-grey.svg');
 		}
 		&.expanded{
-			-webkit-transform: rotate(180deg);
-		  -ms-transform: rotate(180deg);
-		  transform: rotate(180deg);
+			@include rotate(180);
 		}
 	}//end expand all/collapse all
 	label + a.button{
