Install citizen preview

--- a/web/themes/crane/scss/entities/_node-form.scss
+++ b/web/themes/crane/scss/entities/_node-form.scss
@@ -85,7 +85,7 @@
 				margin-right: 1rem;
 				margin-bottom: 1rem;
 			}
-			#edit-preview{
+			#edit-citizen-preview{
 				@include submitButton;
 				background: $green;
 				margin-bottom: 1rem;
