--- a/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/08-section-menu/_section-menu-block.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/01-blocks/08-section-menu/_section-menu-block.twig
@@ -5,7 +5,7 @@
 <nav aria-label="section-menu" id="block-section-menu"{{ drupalAttributes }} class="block--system-menu section-menu">
   {# Label. If not displayed, we still provide it for screen readers. #}
   {{ title_prefix }}
-  <h2 id="section-menu-title" class="block-title{% if not showTitle %} visually-hidden{% endif %}"><a href="#" class="section-menu-toggle" aria-label="Mobile Section Menu Toggle"><i class="fa fa-bars" aria-hidden="true"></i>{{ blockTitle }}</a></h2>
+  <h2 id="section-menu-title" class="block-title{% if not showTitle %} visually-hidden{% endif %}"><a href="#" class="section-menu-toggle" aria-label="Mobile Section Menu Toggle"><i class="fas fa-bars" aria-hidden="true"></i>{{ blockTitle }}</a></h2>
   {{ title_suffix }}
 
   <div id="section-menu-wrapper">
