Start switch to media library, create remote video type, enable WYSIWYG embed

--- a/web/themes/citizen_patterns/components/_patterns/02-chunks/04-media/_media.scss
+++ b/web/themes/citizen_patterns/components/_patterns/02-chunks/04-media/_media.scss
@@ -30,6 +30,22 @@ img{
 	width: 100%;
 }
 
+/* EMBEDDED VIDEO
+------------------ */
+.field-media-oembed-video{
+	position: relative;
+	padding-bottom: 56.25%;
+	iframe{
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		width: 100%;
+		height: 100%;
+	}
+}
+
 /* MEDIA IN WYSIWYG 
 ------------------- */
 .embedded-entity{
