--- a/web/themes/crane/scss/elements/_media.scss
+++ b/web/themes/crane/scss/elements/_media.scss
@@ -1,9 +1,9 @@
 /* ==============
 	 MEDIA
 ================== */
-.media-library-item__attributes{
-	min-height: 22px;
-}
+// .media-library-item__attributes{
+// 	min-height: 22px;
+// }
 
 /* CAPTION FIELD
 ------------------- */
@@ -49,6 +49,7 @@
 	background-image: url('../images/icons/file/powerpoint.svg');
 }
 
+/*
 //icons in browser
 .eb-media .views-field .file-extension{
 	& > span{
@@ -118,6 +119,7 @@
 		}
 	}
 }//end media view list
+*/
 
 /* FILE ICONS
 --------------- */
