--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/10-video/_video.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/10-video/_video.scss
@@ -3,7 +3,8 @@
 ================= */
 
 .paragraph--type--video{
-	.field-video{
+	@include textConstrain;
+	article{
 		@include animation('fadeIn 1.5s 1');
 	}
 }//end video widget
